Nice grassy field.

--- a/web/matrices/src/index.html
+++ b/web/matrices/src/index.html
@@ -5,7 +5,10 @@
   </head>
   <body>
     <div id="container">
-      <canvas id="app" height=480 width=720></canvas>
+      <div id="display">
+        <canvas id="app" height=480 width=720></canvas>
+        <canvas id="app-text-overlay" height=480 width=720></canvas>
+      </div>
     </div>
     <script type="module" src="index.ts"></script>
   </body>
